tests/fixtures/invalid/pow_list_bool_str.py
# Cannot call pow() with List[int], Bool, Str
x = pow([1, 2, 3], True, "hello")
